--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         const formData = new FormData();
         formData.append("html", html);
   
-        const response = await fetch("http://127.0.0.1:8000/xhtml2pdf", {
+        const response = await fetch("https://endpoints.aguara.app/xhtml2pdf", {
           method: "POST",
           body: formData
         });
